app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "uikit/variables-theme.scss";
@import "uikit/mixins-theme.scss";
@import "uikit/uikit-theme.scss";

// Background - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
html {
    background-color: #E9E7E7;

    // background-image: url("https://mdn.mozillademos.org/files/6457/mdn_logo_only_color.png");
    // background: url("ignasi_pattern_s.png");
}

// Search Bar (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - - //
.uk-search-navbar .uk-search-input {
    border-radius: 50px;
    // border: 3px solid white;
    font-size: 18px;
    background: white;
    // background: linear-gradient(0deg, rgba(255, 255, 255, 1) 30%, rgba(231, 231, 231, 1) 100%);
}

.uk-search-input:hover, :focus {
    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
}

// Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
#search-results {
    margin-top: 80px;
}

// Scroll Up Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
.scroll-up {
    position: fixed;
    bottom: 9%;
    right: 2%;
    z-index: 3;
}

.scroll-up-button {
    box-shadow: 0px 0px 0px 0px transparent;
    background: transparent;
    border: 0px;
    transition-duration: 0.2s;
}

.scroll-up-button:hover {
    box-shadow: 0px 0px 0px 0px transparent;
    filter: drop-shadow(0px 2px 3px #ACACAC);
    background: transparent;
    border: 0px;
    color: inherit;
}

.scroll-up-button:active {
    box-shadow: 0px 0px 0px 0px transparent;
    background: transparent;
    border: 0px;
    transform: scaleY(1.5);

}

// Show More Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
#show-more {
    text-align: center;
}
.show-more-button {
    background: white;
    border: 0px;
    border-radius: 50px;
    text-transform: capitalize;
}

.show-more-button:hover {
    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
    border: 0px;
    background-color: white;
}

.show-more-button:active {
    background-color: white;
    border: 0px;
    box-shadow: inset 0px 0px 11px 0px rgba(158, 158, 158, 0.6);
}

// Cover View (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - - //
.cover-view {
    margin-bottom: 0px;
}

.game-space {
    padding-bottom: 30px !important;
}

.game-name {
    margin-top: 15px;
    margin-bottom: 5px;
    max-width: 200px;
    font-weight: 500;
}

.game-release-date {
    margin: 0px;
    font-size: 14px;
    font-style: italic;
}

.game-platform {
    margin: 0px;
    font-size: 12px;
    font-style: italic;
}

.game-cover {
    margin-bottom: 0px !important;
    border-radius: 3px;
    box-shadow: -2px 4px 9px 1px #9e9e9e;
}

.game-cover-effect {
    position: relative;
    transition-duration: 0.3s;
}

.game-cover-effect:hover {
  transform: rotate(10deg);
  // cursor: pointer; // might be not needed
}

.game-cover-effect::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 90px;
    border-radius: 3px;
    top: 0;
    left: 0;
    background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
}

.no-cover {
    width: 200px;
    height: 266px;
    margin-bottom: 0px !important;
    border-radius: 3px;
    outline: 1px solid #ffffff3d;
    outline-offset: -1px;
    outline-style: outset;
    background-color: transparent;
    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6), inset 0px 0px 120px rgba(158, 158, 158, 0.6);
    transition-duration: 0.3s;
}

.no-cover:hover {
  transform: rotate(10deg);
}

.no-cover-tag {
    text-align: center;
    font-size: 18px;
    text-transform: capitalize;
    color: #0000004f;
    text-shadow: 2px 2px 3px #c2c2c2;
    padding: 50px 10px 0px 10px;
}

.unselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
// Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
.game-warning {
}

// Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
footer {
    margin: auto;
    margin-top: 45px;
    padding-top: 5px;
    border-top: 1px solid #eaeaea;
    color: #777;
}

footer a {
    font-size: 80%;
    vertical-align: top;
}

footer a:hover {
    color: #222;
}

footer small {
    float: left;
}

footer ul {
    float: right;
    list-style: none;
}

footer ul li {
    float: left;
    margin-left: 10px;
}

